/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

import "frameworks/base/core/proto/android/graphics/rect.proto";

package android.inputmethodservice;

option java_multiple_files = true;

message SoftInputWindowProto {
    reserved 1;  // name
    reserved 2;  // window_type
    reserved 3;  // gravity
    reserved 4;  // takes_focus
    reserved 5;  // bounds
    optional int32 window_state = 6;
}